@@ -1,3 +1,7 @@
+2009-09-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #11915: htmlArea RTE: superfluous span tags in content after server-based cleaning on paste operation
+
 2009-09-13  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #11847: htmlArea RTE displays empty editing area in Opera 10
